--- a/prod/requirements.txt
+++ b/prod/requirements.txt
@@ -1,5 +1,7 @@
 python-dotenv
 pinecone-client
+google-cloud-translate
+google-auth
 groq
 nltk
 sentence-transformers==0.1.0
@@ -7,4 +9,5 @@ streamlit==1.8.1
 requests
 pyperclip
 torch>=1.0.1
-ollama
+protobuf<=3.20.3
+altair
